--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "swiper": "^11.2.10",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
